Version 1.3.2 - not yet released


Version 1.3.1 - 01-Sep-2017
* update target SDK version 25
* fix NPE (#18)

Version 1.3.0 - 28-feb-2017
* queue fix if phone is not connected (#10)
* tracking interval and key change on the fly (#14)
* bugfixes (#13)
* upgrade to splunk mint 5.1
* upgrade to roboelectric 3.0
* update target SDK version 22
* Change checkbox to switch button
* Improved status line
* Improve network state change

Version 1.1.0 - 25-mai-2015
* update target SDK version 22
* some text changes
* migrate to splunk mint 4.2
* cleanup unused code
* make server ip address modifiable (#8)
* improve localizations (#9)

Version 1.0.4 - 07-jan-2015
* fix ip address problem (#7)

Version 1.0.3 - 14-dec-2014
* fix NPE on stop Looper (#4)
* prepare for Android 5
* minor GUI cosmetic changes
* updated SkyLines server IP (#6)
* more unit test

Version 1.0.2 - 07-feb-2014
* prompt user to enable GPS (#2)

Version 1.0.1 - 08-jan-2014
* support for Android 2.1
* fix Invalid BigInteger (#1)
* upgrade to bugsense 3.6

Version 1.0 - 27-nov-2013
* initial release