@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="ch.luethi.skylinestracker"
-          android:versionCode="29"
-          android:versionName="1.3.1">
+          android:versionCode="30"
+          android:versionName="1.3.2">
 
     <uses-sdk
             android:minSdkVersion="7"
-            android:targetSdkVersion="22"/>
+            android:targetSdkVersion="27"/>
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
