@@ -1,4 +1,5 @@
 Version 1.3.2 - not yet released
+* update target SDK version 27
 
 
 Version 1.3.1 - 01-Sep-2017
